added the paragraph about feature

--- a/report/main.tex
+++ b/report/main.tex
@@ -48,9 +48,9 @@
 % The "\\" is used to break lines. The \url command
 % is useful for typesetting URLs and email addresses (it uses the
 % Courier font).
-\title{Solving the 8-Puzzle}
- \author{Alan Turing \and John von Neumann\\
- \url{{alturing, jovonneumann}@davidson.edu}\\
+\title{Handwritten Digit Recognition Using Multilayered Learning and Elastic Matching}
+ \author{Mutian Chen \and Ryland Wheliss\\
+ \url{{kychen, rywheliss}@davidson.edu}\\
  Davidson College\\
  Davidson, NC 28035\\
  U.S.A.}
