--- a/report/project1.bib
+++ b/report/project1.bib
@@ -30,7 +30,27 @@
     url = {http://portal.acm.org/citation.cfm?id=773294},
     year = {2003}
 }
-
+@book{hall,
+    author = {Hall, Mark A.},
+    isbn = {0137903952},
+    keywords = {ai, books},
+    posted-at = {2006-08-09 11:54:13},
+    priority = {2},
+    publisher = {Pearson Education},
+    title = {{Correlation-based Feature Selection for
+Machine Learning}},
+    url = {https://books.google.com/books?id=fyVtp3EMxasC},
+    year = {1999}
+}
+@book{bellman,
+    author = {Bellman, Richard Ernest},
+    isbn = {978-0-486-42809-3},
+    keywords = {ai, books},
+    publisher = {Courier Dover Publications},
+    title = {{Dynamic Programming}},
+    url = {https://www.lri.fr/~pierres/donnE9es/save/these/articles/lpr-queue/hall99correlationbased.pdf},
+    year = {2003}
+}
 % Citation for a paper
 @article{turing1936,
   author = {Turing, Alan M.},
@@ -41,7 +61,15 @@
   volume = 2,
   year = 1936
 }
-
+@article{turing1936,
+  author = {Turing, Alan M.},
+  journal = {Proceedings of the London Mathematical Society},
+  number = 42,
+  pages = {230--265},
+  title = {On Computable Numbers, with an Application to the {E}ntscheidungsproblem},
+  volume = 2,
+  year = 1936
+}
 % Citation for a website
 @misc{maxsat,
 title = {Eleventh Max-{SAT} {E}valuation},
