--- a/report/project1.bib
+++ b/report/project1.bib
@@ -70,6 +70,24 @@ Machine Learning}},
   volume = 2,
   year = 1936
 }
+@article{milgram,
+  author = {Jonathan Milgram, Mohamed Cheriet, Robert Sabourin.},
+  journal = {HAL archives},
+  title = {?One Against One? or ?One Against All?: Which One is Better for Handwriting Recognition with SVMs?},
+  year = 2006
+}
+@article{cun,
+  author = {Yann Le Cun, Léon Bottou, Yoshua Bengio},
+  journal = {Speech and Image Processing Services Research Lab},
+  title = {Reading Checks with Multilayer Graph Transformer Networks},
+  year = 1997
+}
+@article{simard,
+  author = {Patrice Y. Simard, Dave Steinkraus, John C. Platt },
+  journal = {Proceedings of the Seventh International Conference on Document Analysis and Recognition },
+  title = {Best Practices for Convolutional Neural Networks Applied to Visual Document Analysis },
+  year = 2003
+}
 % Citation for a website
 @misc{maxsat,
 title = {Eleventh Max-{SAT} {E}valuation},
