--- a/report/contributions.tex
+++ b/report/contributions.tex
@@ -2,14 +2,10 @@
 \section{Contributions}
 \label{sec:contrib}
 
-Briefly summarize the contributions of you and your partner in this
-section. For example: ``A.T. wrote the gradient descent code and ran
-experiments; J.vN. ran the experiments using scikit-learn's built-in
-regression solver. A.T. wrote the introduction and background sections
-and prepared figure \ref{fig:tex} and table
-\ref{tab:example}. J.vN. wrote the experiments and results
-sections. Both authors proof-read the entire document.'' I will be
-looking for roughly equal contributions from both partners in both
-aspects of the assignment (i.e., the programming/data
-preprocessing/experimentation and writing).
-
+Mutian wrote the SVD classifier as well as the feature selection
+code. Ryland wrote the MLP classifier code as well as investigated
+more into the testing and training sets. Ryland wrote the
+Introduction, the Background Information, the Citations, the
+Contributions, the Acknowledgements and the experiments. Mutian wrote part of the experiments, the results and the conclusion. Mutian was
+also big into researching what other people had done while Ryland
+interpreted those readings to work as classifiers.
