--- a/report/intro.tex
+++ b/report/intro.tex
@@ -4,16 +4,13 @@
 \section{Introduction}
 \label{sec:intro}
 
-In this section, you should introduce the reader to the problem you
-are attempting to solve. For example, for the first project: describe
-the dataset, and the prediction problem that you are
-investigating. You should also cite and briefly describe other related
-papers that have tackled this problem (or similar ones) in the past
---- things that came up during the course of your research. In the
-AAAI style, citations look like \cite{aima} (see
-the comments in the source file \texttt{intro.tex} to see how this
-citation was produced). Conclude by summarizing how the
-remainder of the paper is organized. \\
+For this assignment we were given a MNIST dataset which consisted of 60,000
+handwritten letters that each were converted into 28 x 28 set of
+pixels displaying the color of each pixel. There was then a label for
+each letter that we were then asked to predict for a test set. We
+investigated different classifiers and looked at many resources to
+determine what the greatest predictors were. 
+\cite{milgram}
 
 % Citations: As you can see above, you create a citation by using the
 % \cite{} command. Inside the braces, you provide a "key" that is
@@ -26,6 +23,5 @@ remainder of the paper is organized. \\
 % in LaTeX. To break a line, you need to end it with \\. To begin a 
 % new paragraph, end a line with \\, leave a blank
 % line, and then start the next line (like in this example).
-Overall, the aim in this section is context-setting: what is the
-big-picture surrounding the problem you are tackling here?
+
 
