--- a/report/experiments.tex
+++ b/report/experiments.tex
@@ -13,7 +13,7 @@ According to Hall, feature selection process consists of the following steps:
 	\item Stopping criterion
 In this section, th
 \end{itemize}
-As introduced in the "Data Preparation" section, after some inspections through the data sets, it was observed that some pixels's grey scale values stayed the same all the time. Those points generally are more likely to have no significant coreThus, those low-variance features could be the starting points.
+As introduced in the "Data Preparation" section, after some inspections through the data sets, it was observed that some pixels' grey scale values stayed the same all the time. Those points generally tend to have no significant impacs on the predictions according to the low-variance rule.Thus, those low-variance rules. Thus, those features could be the starting points. Withthe variance feature selection from the sckikit learn library, the features are reduced 
 The backward elemination method was adpoted, which means that only deletions were considered.
 \subsection{Classifiers}
 \label{class}
