--- a/report/intro.tex
+++ b/report/intro.tex
@@ -9,8 +9,13 @@ handwritten letters that each were converted into 28 x 28 set of
 pixels displaying the color of each pixel. There was then a label for
 each letter that we were then asked to predict for a test set. We
 investigated different classifiers and looked at many resources to
-determine what the greatest predictors were. 
-\cite{milgram}
+determine what the greatest predictors were.\\ 
+
+We investigated the use of MultiLayered Perceptron which was described
+in the paper “One Against One” or “One Against All”: Which One is
+Better for Handwriting Recognition with SVMs?, from there
+we discovered the scikit learn had the same classifier\cite{milgram}. 
+
 
 % Citations: As you can see above, you create a citation by using the
 % \cite{} command. Inside the braces, you provide a "key" that is
