--- a/report/contributions.tex
+++ b/report/contributions.tex
@@ -6,6 +6,7 @@ Mutian wrote the SVD classifier as well as the feature selection
 code. Ryland wrote the MLP classifier code as well as investigated
 more into the testing and training sets. Ryland wrote the
 Introduction, the Background Information, the Citations, the
-Contributions, the Acknowledgements and the experiments. Mutian wrote part of the experiments, the results and the conclusion. Mutian was
+Contributions, the Acknowledgements and the experiments. Mutian wrote part of
+the experiments, the results and the conclusion. Mutian was
 also big into researching what other people had done while Ryland
 interpreted those readings to work as classifiers.
