--- a/report/ack.tex
+++ b/report/ack.tex
@@ -1,5 +1,7 @@
 
-\section{Acknowledgements} 
-\label{sec:ack} 
+\section{Acknowledgements}
+\label{sec:ack}
 
-This section is optional. But if there are people you'd like to thank for their help with the project --- a person who contributed some insight, friends who volunteered to help out with data collection, etc. --- then this is the place to thank them. Keep it short!
+We would like to thank Dr. Ramanujan for answering some of our questions
+throughout the process as well as some of our classmates who helped in tough
+points. 
