--- a/report/results.tex
+++ b/report/results.tex
@@ -2,29 +2,6 @@
 \section{Results}
 \label{sec:results}
 
-Present the results of your experiments. Simply presenting the data is
-insufficient! You need to analyze your results. What did you discover?
-What is interesting about your results? Were the results what you
-expected? Use appropriate visualizations. Prefer graphs and charts to
-tables as they are easier to read (though tables are often more
-compact, and can be a better choice if you're squeezed for space).
-
-\subsection{Embedding Pictures}
-\label{subsec:pics}
-
-See the source code (\texttt{results.tex}) for instructions on how to
-insert figures (like figure~\ref{fig:tex}) or plots into your
-document.
-
-% Note that TeX has a mind of its own when it comes to placing images
-% in documents - where a figure appears in the PDF document will often
-% be quite different from where it appears in the source code. This is
-% a feature, not a bug - it enables LaTeX to produce layouts that
-% "flow" better. It only takes a few lines to insert a figure into
-% your write-up - I recommend using PNG, JPG or PDF images
-% (incidentally, programs like Excel and Matlab will allow you to save
-% any plots or figures you generate in those formats). The \figure{}
-% command is used to create a new figure.
 \begin{figure}[htb]
 
   \centering  % centers the image in the column
@@ -35,15 +12,6 @@ document.
 
   % *Every* figure should have a descriptive caption.
   \caption{On the trustworthiness of \LaTeX. Image courtesy of \texttt{xkcd}.}
-
-  % The label is a handle you create so that you can refer to this
-  % figure (using the \ref{} command) from other parts of your
-  % document. LaTeX automatically renumbers figures and updates
-  % references when you recompile, so you should do it this way rather
-  % than hard-coding in references. Notice that I've also been
-  % creating labels for the various sections in the document; I could
-  % use \ref{} command to refer to those sections using their labels
-  % too.
   \label{fig:tex}
 
 \end{figure}
@@ -51,30 +19,25 @@ document.
 \subsection{Creating Tables}
 \label{subsec:tables}
 
-Again, refer to \texttt{results.tex} to learn how to create simple
-tables (like table~\ref{tab:example}).
 \begin{figure}[htb]
   \centering % centers the entire table
 
-  % The following line sets the parameters of the table: we'll have
-  % three columns (one per 'c'), each
-  % column will be centered (hence the 'c'; 'l' or 'r' will left or
-  % right justify the column) and the columns
-  % will have lines between them (that's the purpose of the |s between
-  % the 'c's).
-  \begin{tabular}{|c|c|c|} 
-    \hline \hline % draws two horizontal lines at the top of the table
-    Column 1 & Column 2 & Column 3 \\ % separate column contents using the &
+  \begin{tabular}{c|c|c|}
+
+     & Elastic or Not & % Error \\ % separate column contents using the &
     \hline % line after the column headers
-    $1$ & $3.1$ & $2.7$ \\
-    $42$ & $-1$ & $1729$\\
+    SGD & with &  \\
+    SGD & without &  \\
+    SVM & with &  \\
+    SVM & without &  \\
+    MLP Identity & with &  \\
+    MLP Identity & without &  \\
+    MLP Rectified & with &  \\
+    MLP Rectified & without &  \\
     \hline \hline
   \end{tabular}
 
-  % As with figures, *every* table should have a descriptive caption
-  % and a label for ease of reference.
   \caption{An example table.}
   \label{tab:example}
 
 \end{figure}
-
